--- a/practice-02/index.html
+++ b/practice-02/index.html
@@ -165,11 +165,11 @@
             <div class="card w-100 mb-md-0">
               <h3 class="card-header">SERVICE</h3>
               <div class="card-body">
-                <p class="card-text">
+                <h4 class="card-text">
                   <a class="text-black" href="#">
                     CRM insights: Selecting the Right One for Your Organization
                   </a>
-                </p>
+                </h4>
               </div>
               <p class="card-footer">
                 05 Sep 2022, <span class="text-black-50">by Joshua Nash</span>
@@ -209,11 +209,11 @@
                           class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw">
                   </picture>
                   <div class="card-body">
-                      <p class="card-text">
+                      <h4 class="card-text">
                           <a class="text-black" href="#">
                               How To Deliver a Successful Product Launch
                           </a>
-                      </p>
+                      </h4>
                   </div>
                   <p class="card-footer">29 Jun 2022,<span class="text-black-50">by joshua Nash</span> </p>
               </div>
@@ -230,11 +230,11 @@
                           class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw">
                   </picture>
                   <div class="card-body">
-                      <p class="card-text">
+                      <h4 class="card-text">
                           <a class="text-black" href="#">
                               The best cities for sales careers in 2022
                           </a>
-                      </p>
+                      </h4>
                   </div>
                   <p class="card-footer">20 Mar 2022, <span class="text-black-50">by Bill Holloway</span></p>
               </div>
@@ -245,11 +245,11 @@
                   <img src="./img/product__item3.png" alt="Here is a photo of the product title above"
                       class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw ">
                   <div class="card-body">
-                      <p class="card-text">
+                      <h4 class="card-text">
                           <a class="text-black" href="#">
                               How to use 360 feedback to improve sales performance
                           </a>
-                      </p>
+                      </h4>
                   </div>
                   <p class="card-footer">07 Jun 2022, <span class="text-black-50">by Stephen Henderson</span>
               </div>
@@ -260,11 +260,11 @@
                   <img src="./img/product__item4.png" alt="Here is a photo of the product title above"
                       class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw ">
                   <div class="card-body">
-                      <p class="card-text">
+                      <h4 class="card-text">
                           <a class="text-black" href="#">
                               The Challenger Sale model: How to lead the conversation
                           </a>
-                      </p>
+                      </h4>
                   </div>
                   <p class="card-footer">09 Jan 2022,<span class="text-black-50">by joshua Nash</span> </p>
               </div>
@@ -275,11 +275,11 @@
                   <img src="./img/product__item5.png" alt="Here is a photo of the product title above"
                       class="card-img-top" sizes="(min-width: 66em) 33vw,  (min-width: 44em) 50vw, 100vw ">
                   <div class="card-body">
-                      <p class="card-text">
+                      <h4 class="card-text">
                           <a class="text-black" href="#">
                               3 ways To automate your lead generation process with Yoora
                           </a>
-                      </p>
+                      </h4>
                   </div>
                   <p class="card-footer">08 Jul 2022, <span class="text-black-50"> Leroy Figueroa</span> </p>
               </div>
@@ -290,11 +290,11 @@
                   <img src="./img/product__item6.png" alt="Here is a photo of the product title above"
                       class="card-img-top" sizes="(min-width: 66em) 100vw,  (min-width: 44em) 20vw, 100vw ">
                   <div class="card-body">
-                      <p class="card-text">
+                      <h4 class="card-text">
                           <a class="text-black" href="#">
                               Marketplace Monthly Apps Spotlight: Aug 2022
                           </a>
-                      </p>
+                      </h4>
                   </div>
                   <p class="card-footer">05 Aug 2022,<span class="text-black-50">by joshua Nash</span> </p>
               </div>
@@ -321,9 +321,9 @@
               <img src="./img/marketing__img.png" alt="Here is a photo of the marketing title above" class="card-img-top"
                 sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw">
               <div class="card-body">
-                <p class="card-text">
+                <h4 class="card-text">
                   Email marketing best practices: 10 experts share their email tips
-                </p>
+                </h4>
               </div>
               <p class="card-footer">
                 23 Nov 2022,
@@ -335,9 +335,9 @@
             <div class="card card-horizontal">
               <div class="card-horizontal-left">
                 <div class="card-body">
-                  <p class="card-text">
+                  <h4 class="card-text">
                     Access Yoora’s leads features on your mobile
-                  </p>
+                  </h4>
                 </div>
                 <p class="card-footer">
                   11 Aug 2022,
@@ -349,9 +349,9 @@
             <div class="card card-horizontal">
               <div class="card-horizontal-left">
                 <div class="card-body">
-                  <p class="card-text">
+                  <h4 class="card-text">
                     Sales presentations: templates, examples and ideas on how to present like a pro
-                  </p>
+                  </h4>
                 </div>
                 <p class="card-footer">
                   11 Oct 2022,
@@ -363,9 +363,9 @@
             <div class="card card-horizontal">
               <div class="card-horizontal-left">
                 <div class="card-body">
-                  <p class="card-text">
+                  <h4 class="card-text">
                     How To Deliver a Successful Product Launch
-                  </p>
+                  </h4>
                 </div>
                 <p class="card-footer">
                   30 Jan 2022,
@@ -399,11 +399,11 @@
                     <img src="./img/article__img1.png" alt="Here is a photo of the article title above" class="card-img-top"
                         sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw">
                     <div class="card-body">
-                        <p class="card-text">
+                        <h4 class="card-text">
                             <a class="text-black" href="#">
                                 Sales Funnels: Definition, Process, Stages and Examples
                             </a>
-                        </p>
+                        </h4>
                     </div>
                     <p class="card-footer">29 Jun 2022, <span class="text-black-50">by joshua Nash</span>
                 </div>
@@ -414,11 +414,11 @@
                     <img src="./img/article__img2.png" alt="Here is a photo of the article title above" class="card-img-top"
                         sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw">
                     <div class="card-body">
-                        <p class="card-text">
+                        <h4 class="card-text">
                             <a class="text-black" href="#">
                                 What is a sales Yoora and how do you build one?
                             </a>
-                        </p>
+                        </h4>
                     </div>
                     <p class="card-footer">29 Mar 2022, <span class="text-black-50">by Amanda Brooks</span>
                 </div>
@@ -429,11 +429,11 @@
                     <img src="./img/article__img3.png" alt="Here is a photo of the article title above" class="card-img-top"
                         sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw">
                     <div class="card-body">
-                        <p class="card-text">
+                        <h4 class="card-text">
                             <a class="text-black" href="#">
                                 10 real estate cold calling scripts to increase lead generation
                             </a>
-                        </p>
+                        </h4>
                     </div>
                     <p class="card-footer"> 27 Dec 2022, <span class="text-black-50">by Roxie Sandoval</span></p>
               </div>
