--- a/practice-02/index.html
+++ b/practice-02/index.html
@@ -177,7 +177,14 @@
             </div>
           </div>
           <div class="service-right col-12 col-md-6">
-            <img src="./img/service__img.png" alt="This is the service's photo" class="service-img">
+            <picture>
+              <!-- mobile -->
+              <source media="(max-width:768px)" srcset="./img/service_img-0.5.jpg">
+              <!-- desktop -->
+              <source media="(min-width:768px)" srcset="./img/service_img-1.5.jpg">
+              <img src="./img/service_img-0.5.jpg" alt="This is the service's photo" class="service-img"
+                sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw">
+            </picture>
           </div>
         </div>
       </div>
@@ -202,10 +209,10 @@
                   <h3 class="card-header">New</h3>
                   <picture>
                       <!-- mobile -->
-                      <source media="(max-width:768px)" srcset="./img/product_img1-0.5x.jpg ">
+                      <source media="(max-width:768px)" srcset="./img/product_img1-0.5.jpg ">
                       <!-- desktop -->
-                      <source media="(min-width:768px)" srcset="./img/product_img1-1.5x.jpg ">
-                      <img src="./img/product_img1-1.5x.jpg" alt="Here is a photo of the product title above"
+                      <source media="(min-width:768px)" srcset="./img/product_img1-1.5.jpg ">
+                      <img src="./img/product_img1-0.5.jpg" alt="Here is a photo of the product title above"
                           class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw">
                   </picture>
                   <div class="card-body">
@@ -226,7 +233,7 @@
                       <source media="(max-width:768px)" srcset="./img/product_img2-0.5.jpg">
                       <!-- desktop -->
                       <source media="(min-width:768px)" srcset="./img/product_img2-1.5.jpg ">
-                      <img src="./img/product_img2-1.5.jpg" alt="Here is a photo of the product title above"
+                      <img src="./img/product_img2-0.5.jpg" alt="Here is a photo of the product title above"
                           class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw">
                   </picture>
                   <div class="card-body">
@@ -242,8 +249,14 @@
             <div class="col-12 col-md-6 col-lg-4 d-flex mb-5 mb-md-0">
               <div class="card card-img">
                   <h3 class="card-header">Sales</h3>
-                  <img src="./img/product__item3.png" alt="Here is a photo of the product title above"
-                      class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw ">
+                  <picture>
+                    <!-- mobile -->
+                    <source media="(max-width:768px)" srcset="./img/product_img3-0.5.jpg">
+                    <!-- desktop -->
+                    <source media="(min-width:768px)" srcset="./img/product_img3-1.5.jpg ">
+                    <img src="./img/product_img3-0.5.jpg" alt="Here is a photo of the product title above"
+                        class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw">
+                </picture>
                   <div class="card-body">
                       <h4 class="card-text">
                           <a class="text-black" href="#">
@@ -257,8 +270,14 @@
             <div class="col-12 col-md-6 col-lg-4 d-flex mb-5 mb-md-0">
               <div class="card card-img">
                   <h3 class="card-header">Sales</h3>
-                  <img src="./img/product__item4.png" alt="Here is a photo of the product title above"
-                      class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw ">
+                  <picture>
+                    <!-- mobile -->
+                    <source media="(max-width:768px)" srcset="./img/product_img4-0.5.jpg">
+                    <!-- desktop -->
+                    <source media="(min-width:768px)" srcset="./img/product_img4-1.5.jpg ">
+                    <img src="./img/product_img4-0.5.jpg" alt="Here is a photo of the product title above"
+                        class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw">
+                </picture>
                   <div class="card-body">
                       <h4 class="card-text">
                           <a class="text-black" href="#">
@@ -272,8 +291,14 @@
             <div class="col-12 col-md-6 col-lg-4 d-flex mb-5 mb-md-0">
               <div class="card card-img">
                   <h3 class="card-header">Product</h3>
-                  <img src="./img/product__item5.png" alt="Here is a photo of the product title above"
-                      class="card-img-top" sizes="(min-width: 66em) 33vw,  (min-width: 44em) 50vw, 100vw ">
+                  <picture>
+                    <!-- mobile -->
+                    <source media="(max-width:768px)" srcset="./img/product_img5-0.5.jpg">
+                    <!-- desktop -->
+                    <source media="(min-width:768px)" srcset="./img/product_img5-1.5.jpg ">
+                    <img src="./img/product_img5-0.5.jpg" alt="Here is a photo of the product title above"
+                        class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw">
+                </picture>
                   <div class="card-body">
                       <h4 class="card-text">
                           <a class="text-black" href="#">
@@ -287,8 +312,14 @@
             <div class="col-12 col-md-6 col-lg-4 d-flex mb-5 mb-md-0">
               <div class="card card-img">
                   <h3 class="card-header">Product</h3>
-                  <img src="./img/product__item6.png" alt="Here is a photo of the product title above"
-                      class="card-img-top" sizes="(min-width: 66em) 100vw,  (min-width: 44em) 20vw, 100vw ">
+                  <picture>
+                    <!-- mobile -->
+                    <source media="(max-width:768px)" srcset="./img/product_img6-0.5.jpg">
+                    <!-- desktop -->
+                    <source media="(min-width:768px)" srcset="./img/product_img6-1.5.jpg ">
+                    <img src="./img/product_img6-0.5.jpg" alt="Here is a photo of the product title above"
+                        class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw">
+                </picture>
                   <div class="card-body">
                       <h4 class="card-text">
                           <a class="text-black" href="#">
@@ -318,8 +349,14 @@
           <div class="col-12 mb-5 mb-lg-0">
             <div class="card card-img">
               <h3 class="card-header">Marketing</h3>
-              <img src="./img/marketing__img.png" alt="Here is a photo of the marketing title above" class="card-img-top"
-                sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw">
+              <picture>
+                <!-- mobile -->
+                <source media="(max-width:768px)" srcset="./img/marketing-0.5.jpg">
+                <!-- desktop -->
+                <source media="(min-width:768px)" srcset="./img/marketing-1.5.jpg ">
+                <img src="./img/marketing-0.5.jpg" alt="Here is a photo of the product title above"
+                    class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw">
+            </picture>
               <div class="card-body">
                 <h4 class="card-text">
                   Email marketing best practices: 10 experts share their email tips
@@ -396,8 +433,14 @@
               <div class="col-12 mb-5 mb-lg-0 d-flex">
                 <div class="card card-img">
                     <h3 class="card-header">SERVICE</h3>
-                    <img src="./img/article__img1.png" alt="Here is a photo of the article title above" class="card-img-top"
-                        sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw">
+                    <picture>
+                      <!-- mobile -->
+                      <source media="(max-width:768px)" srcset="./img/product_img7-0.5.jpg">
+                      <!-- desktop -->
+                      <source media="(min-width:768px)" srcset="./img/product_img7-1.5.jpg ">
+                      <img src="./img/product_img7-0.5.jpg" alt="Here is a photo of the product title above"
+                          class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw">
+                  </picture>
                     <div class="card-body">
                         <h4 class="card-text">
                             <a class="text-black" href="#">
@@ -411,8 +454,14 @@
               <div class="col-12 mb-5 mb-lg-0 d-flex">
                 <div class="card card-img">
                     <h3 class="card-header">SALES</h3>
-                    <img src="./img/article__img2.png" alt="Here is a photo of the article title above" class="card-img-top"
-                        sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw">
+                    <picture>
+                      <!-- mobile -->
+                      <source media="(max-width:768px)" srcset="./img/product_img8-0.5.jpg">
+                      <!-- desktop -->
+                      <source media="(min-width:768px)" srcset="./img/product_img8-1.5.jpg ">
+                      <img src="./img/product_img8-0.5.jpg" alt="Here is a photo of the product title above"
+                          class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw">
+                  </picture>
                     <div class="card-body">
                         <h4 class="card-text">
                             <a class="text-black" href="#">
@@ -426,8 +475,14 @@
               <div class="col-12 mb-5 mb-lg-0 d-flex">
                 <div class="card card-img">
                     <h3 class="card-header">SERVICE</h3>
-                    <img src="./img/article__img3.png" alt="Here is a photo of the article title above" class="card-img-top"
-                        sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw">
+                    <picture>
+                      <!-- mobile -->
+                      <source media="(max-width:768px)" srcset="./img/product_img9-0.5.jpg">
+                      <!-- desktop -->
+                      <source media="(min-width:768px)" srcset="./img/product_img9-1.5.jpg ">
+                      <img src="./img/product_img9-0.5.jpg" alt="Here is a photo of the product title above"
+                          class="card-img-top" sizes="(min-width: 66em) 33vw, (min-width: 44em) 50vw, 100vw">
+                  </picture>
                     <div class="card-body">
                         <h4 class="card-text">
                             <a class="text-black" href="#">
